--- a/public/templates/hotel.html
+++ b/public/templates/hotel.html
@@ -4,7 +4,7 @@
         <li class='roomlist' ng-repeat='room in rooms'>
             <a ui-sref="room({roomId:room.id})">
                 <div>
-                    <span>{{roomid.room=room.id}}</span>
+                    <span>{{room.id}}</span>
 
                 </div>
             </a>
