--- a/public/templates/todo.html
+++ b/public/templates/todo.html
@@ -8,7 +8,7 @@
     </ul>
     <form class="add-block">
         <input type="text" ng-model='addItem'>
-        <button class="btn btn-primary" ng-click='addTodo()'><i class="glyphicon glyphicon-plus"></i></button>
+        <button class="btn btn-success" ng-click='addTodo()'><i class="glyphicon glyphicon-plus"></i></button>
         <p class='error'>{{errortext}}</p>
     </form>
 </div>
