--- a/public/css/hotel.css
+++ b/public/css/hotel.css
@@ -1,9 +1,29 @@
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
+    background-color: #449d44;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    color: #fff;
+    background-color: #449d44;
+    cursor: pointer;
+}
+
+.navbar {
+    border-radius: 0;
+}
+.navbar-default .navbar-brand {
+    color: #000;
+}
+
 .main {
 	margin: 10%;
 }
+
 li {
 	list-style-type: none;
 }
+
 .roomlist {
 	width:250px;
 	height: 250px;
@@ -76,3 +96,7 @@ li:hover .trash {
     width: 320px;
 }
 
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
