--- a/public/templates/hotel.html
+++ b/public/templates/hotel.html
@@ -1,11 +1,22 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Hotel California</a>
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-plus"  ng-click='addRoom()'></span> Add Room</a></li>
+      
+    </ul>
+  </div>
+</nav>
+
 <div class='main'>
-    <button class="btn btn-primary" ng-click='addRoom()'><i class="glyphicon glyphicon-plus"></i></button>
     <ul>
         <li class='roomlist' ng-repeat='room in rooms'>
             <a ui-sref="room({roomId:room.id})">
-                <div>
+                <div class="hotelRoom">
                     <span>{{room.id}}</span>
-
                 </div>
             </a>
         </li>
