--- a/public/templates/hotel.html
+++ b/public/templates/hotel.html
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Hotel California</a>
+      <a class="navbar-brand" href="/">Hotel California</a>
     </div>
 
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-plus"  ng-click='addRoom()'></span> Add Room</a></li>
-      
+    <ul class="nav navbar-nav navbar-right">         
+      <li><a class="btn btn-success" ng-click='addRoom()'><i class="glyphicon glyphicon-plus"></i> Add Room</a></li>
     </ul>
   </div>
 </nav>
