--- a/public/css/hotel.css
+++ b/public/css/hotel.css
@@ -34,7 +34,7 @@ li {
 	display: inline-block;
 	text-align: center;
 	font-size: 7em;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     margin-left: 15px;
     margin-bottom:15px;
 }
@@ -46,8 +46,6 @@ li {
     border: 1px solid #f1f1f1;
     display: inline-block;
     text-align: center;
-    font-size: 10em;
-    border-radius: 50%;
     margin-left: 10px;
     margin-bottom:10px;
 }    
@@ -118,6 +116,6 @@ li:hover .trash {
 
 a:hover, a:visited, a:link, a:active
 {
-    color: #f1f1f1;
+    color: #000;
     text-decoration: none;
 }
