--- a/public/css/hotel.css
+++ b/public/css/hotel.css
@@ -3,7 +3,7 @@
     background-color: #449d44;
     border-radius: 0;
     font-size: 1.1em;
-    font-weight:600;
+    font-weight: 600;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
@@ -15,40 +15,52 @@
 .navbar {
     border-radius: 0;
 }
+
 .navbar-default .navbar-brand {
     color: #000;
 }
 
 .main {
-	margin: 10%;
+    margin: 10%;
 }
 
 li {
-	list-style-type: none;
+    list-style-type: none;
 }
 
 .roomlist {
-	width:150px;
-	height: 150px;
-	border: 2px solid #000;
-	display: inline-block;
-	text-align: center;
-	font-size: 7em;
+    width: 150px;
+    height: 150px;
+    border: 2px solid #000;
+    display: inline-block;
+    text-align: center;
+    font-size: 7em;
     /*border-radius: 50%;*/
     margin-left: 15px;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
 @media(max-width: 767px) {
-.roomlist {
-    width:50px;
-    height: 50px;
-    border: 1px solid #f1f1f1;
-    display: inline-block;
-    text-align: center;
-    margin-left: 10px;
-    margin-bottom:10px;
-}    
+    .roomlist {
+        width: 50px;
+        height: 50px;
+        border: 1px solid #f1f1f1;
+        display: inline-block;
+        text-align: center;
+        margin-left: 10px;
+        margin-bottom: 10px;
+        font-size: 2.5em;
+    }
+    .todo {
+        width: 80%;
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        margin-top: -50px;
+        margin-left: -200px;
+        border: 1px solid #f1f1f1;
+        box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.26);
+    }
 }
 
 .todo {
@@ -59,7 +71,7 @@ li {
     margin-top: -50px;
     margin-left: -200px;
     border: 1px solid #f1f1f1;
-    box-shadow: 2px 4px 2px rgba(0,0,0,0.26);
+    box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.26);
 }
 
 .todo h2 {
@@ -114,8 +126,10 @@ li:hover .trash {
     width: 320px;
 }
 
-a:hover, a:visited, a:link, a:active
-{
+a:hover,
+a:visited,
+a:link,
+a:active {
     color: #000;
     text-decoration: none;
 }
