--- a/public/templates/todo.html
+++ b/public/templates/todo.html
@@ -1,3 +1,15 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Hotel California</a>
+    </div>
+
+    <ul class="nav navbar-nav">         
+      <li><a href='/'>Home</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class='todo'>
     <h2>Todo list - Room : {{id}}</h2>
 
