--- a/public/css/hotel.css
+++ b/public/css/hotel.css
@@ -1,31 +1,49 @@
-.navbar-default .navbar-nav>li>a {
-    color: #fff;
-    background-color: #449d44;
-    border-radius: 0;
-    font-size: 1.1em;
-    font-weight: 600;
-}
-
-.navbar-default .navbar-nav>li>a:hover {
-    color: #fff;
-    background-color: #449d44;
-    cursor: pointer;
-}
-
-.navbar {
-    border-radius: 0;
-}
-
-.navbar-default .navbar-brand {
-    color: #000;
-}
-
-.main {
-    margin: 10%;
+ul {
+    padding: 0;
 }
 
 li {
     list-style-type: none;
+}
+
+a:hover,
+a:visited,
+a:link,
+a:active {
+    color: #000;
+    text-decoration: none;
+}
+
+.navbar-custom {
+    position: fixed;
+    top: 0;
+    background-color: #f1f1f1;
+    padding: 0;
+    z-index: 1;
+}
+
+.brand {
+    font-size: 1.2em;
+    font-weight: 100;
+    padding: 15px;
+}
+
+.add-btn {
+    padding-right: 0;
+}
+
+.add-room {
+    border-radius: 0;
+    float: right;
+    padding: 17px;
+    font-size: 1.2em;
+    font-weight: 100;
+    color: #fff !important;
+}
+
+.main {
+    margin-top: 100px;
+    padding: 10%;
 }
 
 .roomlist {
@@ -40,27 +58,9 @@ li {
     margin-bottom: 15px;
 }
 
-@media(max-width: 767px) {
-    .roomlist {
-        width: 50px;
-        height: 50px;
-        border: 1px solid #f1f1f1;
-        display: inline-block;
-        text-align: center;
-        margin-left: 10px;
-        margin-bottom: 10px;
-        font-size: 2.5em;
-    }
-    .todo {
-        width: 80%;
-        position: absolute;
-        top: 25%;
-        left: 50%;
-        margin-top: -50px;
-        margin-left: -200px;
-        border: 1px solid #f1f1f1;
-        box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.26);
-    }
+.main-todo {
+    margin-top: 100px;
+    padding: 10%;
 }
 
 .todo {
@@ -72,6 +72,7 @@ li {
     margin-left: -200px;
     border: 1px solid #f1f1f1;
     box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.26);
+    padding: 0;
 }
 
 .todo h2 {
@@ -126,10 +127,83 @@ li:hover .trash {
     width: 320px;
 }
 
-a:hover,
-a:visited,
-a:link,
-a:active {
-    color: #000;
-    text-decoration: none;
+.add-block-m {
+    display: none;
+}
+
+@media (max-device-width: 768px) {
+    .navbar-custom {
+        text-align: center;
+        height: 100px;
+        font-size: 3em;
+    }
+    .add-room {
+        width: 100%;
+        height: 100%;
+        padding: 13px;
+    }
+    .roomlist {
+        width: 250px;
+        height: 250px;
+        border: 1px solid #f1f1f1;
+        display: inline-block;
+        text-align: center;
+        margin-left: 10px;
+        margin-bottom: 10px;
+        font-size: 11.5em;
+        background: rgba(86, 61, 124, .15);
+        border-radius: 50%
+    }
+    .main-todo {
+        padding: 0;
+    }
+    .todo {
+        width: 100%;
+        position: static;
+        top: 0;
+        left: 0;
+        margin-top: 0;
+        margin-left: 0;
+        padding: 0;
+        overflow: scroll;
+    }
+    .todo h2 {
+        text-align: center;
+        background-color: #f1f1f1;
+        color: #000;
+        height: 100px;
+        font-size: 3em;
+        padding: 25px;
+        border-top: 1px solid #000;
+    }
+    .todo li {
+        list-style-type: none;
+        border-bottom: 1px solid #f1f1f1;
+        padding: 25px;
+        height: 100px;
+        font-size: 3em;
+    }
+    .add-block {
+        display: none;
+    }
+    .add-block-m {
+        background-color: #f1f1f1;
+        height: 100px;
+        position: fixed;
+        bottom: 0;
+        padding: 15px;
+        display: block;
+    }
+    .add-block-m .btn {
+        border-radius: 0;
+        float: right;
+        width: 20%;
+        height: 70px;
+        font-size: 3em;
+    }
+    .add-block-m input {
+        width: 80%;
+        height: 70px;
+        font-size: 3em;
+    }
 }
