--- a/public/templates/todo.html
+++ b/public/templates/todo.html
@@ -1,25 +1,29 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">Hotel California</a>
+<header class="navbar-custom col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="brand col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <a href="/">Hotel California</a>
     </div>
-
-    <ul class="nav navbar-nav">         
-      <li><a href='/'>Home</a></li>
-    </ul>
-  </div>
-</nav>
-
-<div class='todo'>
-    <h2>Todo list - Room : {{id}}</h2>
-
-    <ul>
-        <li ng-repeat='todo in todos'>
-            {{todo}}<span class="trash glyphicon glyphicon-trash" ng-click='removeItem($index)'></span>
-        </li>
-    </ul>
-    <form class="add-block">
-        <input type="text" ng-model='addItem'>
+    <div class="add-btn col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        <a class="add-room btn btn-success" href='/'>Home</a>
+    </div>
+</header>
+<section class='main-todo col-xs-12 col-sm-12 col-md-12 col-lg-12'>
+    <div class='todo col-xs-12 col-md-offset-3 col-md-6'>
+        <h2>Todo list - Room : {{id}}</h2>
+        <ul>
+            <li ng-repeat='todo in todos'>
+                {{todo}}<span class="trash glyphicon glyphicon-trash" ng-click='removeItem($index)'></span>
+            </li>
+        </ul>
+        <form class="add-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <input type="text" ng-model='addItem' placeholder='Enter item to add'>
+            <button class="btn btn-success glyphicon glyphicon-plus" ng-click='addTodo()'></button>
+            <p class='error'>{{errortext}}</p>
+        </form>
+    </div>
+</section>
+<div class='add-block-m col-xs-12 col-sm-12 col-md-12 col-lg-12'>
+    <form>
+        <input type="text" ng-model='addItem' placeholder='Enter item to add'>
         <button class="btn btn-success glyphicon glyphicon-plus" ng-click='addTodo()'></button>
         <p class='error'>{{errortext}}</p>
     </form>
